--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 .Box {
-    height: 10px;
-    width: 10px;
+    height: 10em;
+    width: 10em;
     background-color: black;
-    display: inline-block;
     margin: 5px;
+}
+.flex {
+    display: flex
 }
